--- a/src/components/VehicleList/style.scss
+++ b/src/components/VehicleList/style.scss
@@ -1,3 +1,113 @@
-.VehicleList {
+.vehicle-list {
   width: 100%;
+
+  ul {
+    list-style: none;
+  }
+
+  ul,
+  li {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.vehicle {
+  display: flex;
+
+  &__image {
+    vertical-align: middle;
+    width: 100px;
+  }
+
+  &__info {
+    border-bottom: 1px solid #EEEEEE;
+    display: flex;
+    flex: 1 1 auto;
+    flex-direction: column;
+    justify-content: center;
+    min-width: 0;
+    padding: 0 16px 0;
+  }
+
+  h5 {
+    font-size: 16px;
+    letter-spacing: 2px;
+    margin: 0 0 2px;
+    padding: 0;
+    text-transform: uppercase;
+  }
+
+  &__price {
+    font-size: 14px;
+    letter-spacing: 2px;
+    margin-bottom: 8px;
+  }
+
+  &__description {
+    color: #666666;
+    font-size: 14px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+}
+
+@media only screen and (min-width: 481px) {
+
+  .vehicle-list {
+
+    ul {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
+  .vehicle {
+    display: block;
+    width: 50%;
+
+    &__image {
+      width: 100%;
+    }
+
+    &__info {
+      border-bottom: 0;
+      border-right: 1px solid #EEEEEE;
+      display: block;
+      padding: 24px 8px 8px ;
+      text-align: center;
+    }
+
+    h5 {
+      border: 1px solid #000;
+      border-width: 1px 0;
+      display: inline-block;
+      margin-bottom: 16px;
+      padding: 4px 0;
+    }
+
+    &__price {
+      font-size: 12px;
+    }
+
+    &__description {
+      overflow: auto;
+      text-overflow: initial;
+      white-space: normal;
+    }
+  }
+}
+
+@media only screen and (min-width: 769px) {
+
+  .vehicle {
+    width: 25%;
+
+    &__info {
+      padding-bottom: 16px;
+      padding-left: 16px;
+      padding-right: 16px;
+    }
+  }
 }
