--- a/src/global-styles.scss
+++ b/src/global-styles.scss
@@ -1,5 +1,14 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: sans-serif;
+}
+
 .root {
-  margin: 14px;
-  padding: 12px;
-  z-index: 12;
+  margin: 0;
+  padding: 0;
 }
